Minor formatting change in markdown

--- a/Gaussian Naive Bayes.ipynb
+++ b/Gaussian Naive Bayes.ipynb
@@ -223,7 +223,7 @@
     "\n",
     "Determine a class of an instance. Calculate the following\n",
     "\n",
-    "$$class_{NB}\\big(\\overrightarrow{\\mathbf{x}}\\big) = \\underset{\\textit{class} \\in \\{0, 1\\}}{\\mathrm{arg\\,max}} \\Big(\\log{P(\\textit{class})} + \\sum_i \\log{P(x_i \\text{ | } \\textit{class})} \\Big)$$\n",
+    "$$class_{NB}\\big(\\overrightarrow{\\mathbf{x}}\\big) = \\underset{\\textit{class} \\in \\{0, 1\\}}{\\mathrm{argmax}} \\Big(\\log{P(\\textit{class})} + \\sum_i \\log{P(x_i \\text{ | } \\textit{class})} \\Big)$$\n",
     "\n",
     "where $P(x_i \\text{ | } c_j)$ is as given previously."
    ]
