--- a/Gaussian Naive Bayes.ipynb
+++ b/Gaussian Naive Bayes.ipynb
@@ -11,15 +11,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 355,
+   "execution_count": 383,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
+    "%matplotlib inline\n",
     "import pandas as pd\n",
     "import sklearn, sklearn.model_selection\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import itertools"
    ]
   },
   {
@@ -35,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 356,
+   "execution_count": 384,
    "metadata": {
     "collapsed": false
    },
@@ -57,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 357,
+   "execution_count": 385,
    "metadata": {
     "collapsed": false
    },
@@ -79,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 358,
+   "execution_count": 386,
    "metadata": {
     "collapsed": false
    },
@@ -87,10 +90,10 @@
     {
      "data": {
       "text/plain": [
-       "0.4026086956521739"
+       "0.3882608695652174"
       ]
      },
-     "execution_count": 358,
+     "execution_count": 386,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 359,
+   "execution_count": 387,
    "metadata": {
     "collapsed": false
    },
@@ -110,10 +113,10 @@
     {
      "data": {
       "text/plain": [
-       "0.5973913043478261"
+       "0.6117391304347826"
       ]
      },
-     "execution_count": 359,
+     "execution_count": 387,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 360,
+   "execution_count": 388,
    "metadata": {
     "collapsed": false
    },
@@ -147,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 361,
+   "execution_count": 389,
    "metadata": {
     "collapsed": false
    },
@@ -158,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 362,
+   "execution_count": 390,
    "metadata": {
     "collapsed": false
    },
@@ -169,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 363,
+   "execution_count": 391,
    "metadata": {
     "collapsed": false
    },
@@ -203,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 364,
+   "execution_count": 392,
    "metadata": {
     "collapsed": false
    },
@@ -230,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 365,
+   "execution_count": 393,
    "metadata": {
     "collapsed": true
    },
@@ -257,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 366,
+   "execution_count": 394,
    "metadata": {
     "collapsed": false
    },
@@ -274,15 +277,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "accuracy: 1829 / 2301 = 0.7949\n",
+      "accuracy: 1838 / 2301 = 0.7988\n",
       "\n",
-      "[[ 976.  438.]\n",
-      " [  34.  853.]]\n"
+      "[[964 417]\n",
+      " [ 46 874]]\n"
      ]
     }
    ],
    "source": [
-    "cm = np.zeros((2,2))  # Define a blank confusion matrix\n",
+    "cm = np.zeros((2,2), dtype=np.int)  # Define a blank confusion matrix\n",
     "num_correct = 0\n",
     "for actual, x in X_test.iterrows():\n",
     "    predicted = predict(x)\n",
@@ -291,6 +294,74 @@
     "    cm[actual][predicted] += 1\n",
     "print('accuracy: {} / {} = {:.4f}\\n'.format(num_correct, len(X_test.index), num_correct / len(X_test.index)))\n",
     "print(cm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 395,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def plot_confusion_matrix(cm, classes,\n",
+    "                          normalize=False,\n",
+    "                          title='Confusion matrix',\n",
+    "                          cmap=plt.cm.Blues):\n",
+    "    \"\"\"\n",
+    "    This function prints and plots the confusion matrix.\n",
+    "    Normalization can be applied by setting `normalize=True`.\n",
+    "    \"\"\"\n",
+    "    plt.imshow(cm, interpolation='nearest', cmap=cmap)\n",
+    "    plt.title(title)\n",
+    "    plt.colorbar()\n",
+    "    tick_marks = np.arange(len(classes))\n",
+    "    plt.xticks(tick_marks, classes, rotation=45)\n",
+    "    plt.yticks(tick_marks, classes)\n",
+    "\n",
+    "    if normalize:\n",
+    "        cm = cm.astype('float') / cm.sum(axis=1)[:, np.newaxis]\n",
+    "\n",
+    "    thresh = cm.max() / 2.\n",
+    "    for i, j in itertools.product(range(cm.shape[0]), range(cm.shape[1])):\n",
+    "        plt.text(j, i, cm[i, j],\n",
+    "                 horizontalalignment=\"center\",\n",
+    "                 color=\"white\" if cm[i, j] > thresh else \"black\")\n",
+    "\n",
+    "    plt.tight_layout()\n",
+    "    plt.ylabel('Actual label')\n",
+    "    plt.xlabel('Predicted label')\n",
+    "    plt.style.use('dark_background')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Plot the confusion matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 396,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAVUAAAEmCAYAAADSugNBAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAIABJREFUeJzt3XecE9X+xvHP7NJWQFhAQCmCFMGGCnpVFBC8doq9oCii\n2Hu5XEXFq1iwYy/8AMUGFkRARVEsiChgBUWKIChSFGlSl/z++J6wYd1NwjLZySTP29e8kilJTlj3\n2XPOnDnjRSIRRETEHzlBF0BEJJMoVEVEfKRQFRHxkUJVRMRHClURER8pVEVEfKRQlVTJA94CVgAj\ntuN9ugPjfClR8A4DZgZdCEkthaqcCUwBVgOLgLeBQ31435OBOkBN4JTteJ8XgCN9KE+qRYCmCY75\nBNi9DMoiAVKoZrdrgIeAO7EAbAg8DnT14b13BX4CNvnwXpmgXNAFkLKhUM1e1YD/AZcCrwNrgI1Y\nk/16d0xFLHR/c8tDbhtAB2AhcC2wBKvl9nT7bgNuAU7DasC9gH7AsJjPb4TV7qJhcy4wF1gF/Iw1\n+6PbP4153SHAl1i3wpduPWoCcDsw0b3POKBWCd8/Wv4bYsrfDTgW+2PwJ3BjzPEHApOAv9yxjwIV\n3L6P3eM37vueFvP+/wF+BwbHbANo4j5jf7e+C7DUHSMhplDNXgcDlYA34hxzE3AQsC/QCguWvjH7\n62LhXA8LzseAfOBWrPb7ClAFGJSgLJWBgcAxQFUsKL8u5rgawBh3bE3gAbdeM+aYM7Fwr42F3nVx\nPrcu9m9QD/sj8AxwFtAa6/+8GWjsji0ArsZC+mCgE3CJ29fOPbZy3/eVmPevgdXaexf57DlY4A4D\ndsBCdyj2h0FCTKGavWoCy4jfPO+O1WaXYLWo24CzY/ZvdPs3AmOxWlpp+ww3A3thJ7gWAdOLOeY4\nYBbwvCv3S8CPQOeYYwZjNc21wHDsD0JJNgL93ePLWGA+jNVypwMzsKAEmAp87j53HvAU0D6J73Qr\nsN6Vp6hngNnAZGBn7I+YhJxCNXv9gYVIvL6+XYD5Mevz3bbY94gN5b+xmtq2WoM1mS/CAnUM0CKJ\n8kTLVC9m/fdtKM8fWA0UCkNvccz+tTGvbw6Mdu+/EquJl9S1ELUUWJfgmGewPyaPYOErIadQzV6T\nsF/ibnGO+Q1rukY1dNtKYw3WzI2qW2T/u8C/sRrbj1jYJCpPtEy/lrJM2+IJrFzNgB2x/lYvwWsS\nTQFXBeunHoT1OdfYviJKOlCoZq8VWD/iY1iw7gCUx/o1B7hjXsL6UHfCamW3sPXJpm3xNdb32BDr\nh/1vzL462IiDyljQr8aazkWNxWqMZ2I17NOAPbAaZKpVxWqoq7Fa9MVF9i8GdtvG93wYG852PlY7\nf3I7yyhpQKGa3e7HhlX1xZqqC4DLgJFu/x3YL/23wHfANLetNN7DTuB8i/VPxgZhjivHb9gZ8fb8\nM7TAmuvHYyMO/sDO3B+P9Q2n2nVYmK/CatGvFNnfDzvR9BdwahLv1xU4msLveQ02EqB7ia+QUPA0\nSbWIiH9UUxUR8ZFCVUTERwpVEREfKVRFRHykSR5KYdny1ZH5i/4MuhgSo36DOkEXQWLsWKkceeVz\nE43j3SbjJs6I1MxPfG1J6z0avouNrAiEQrUU5i/6k0O7D0h8oJSZAY9cG3QRJMaprXYhr3yur+9Z\nM79KUr93a796NNGVbimlUBWR8MjxN6hTQaEqIiHhgZf+p4EUqiISHp6v3bQpoVAVkXDwUE1VRMQ/\nnvpURUR8pea/iIiP1PwXEfGJ56mmKiLiK/Wpioj4ReNURUT8pVAVEfGJB+SoT1VExCcapyoi4i81\n/0VEfOKhIVUiIv5R819ExF9q/ouI+EVXVImI+EdT/4mI+El9qiIi/lJNVUTER+pTFRHxiacJVURE\n/KU+VRERH6n5LyLiDw8PT6EqIuITDzxN/Sci4h/VVEVEfKRQFRHxkUJVRMQnnueFok81/UfSiog4\nnuclXJJwNTAd+B54CagENAYmA7OBV4AK7tiKbn22298o0ZsrVEUkNHwI1XrAFUAbYC8gFzgduAd4\nEGgKLAd6ueN7ufWmbv89iT5AoSoioeFTTbUckOcedwAWAR2BV93+oUA397yrW8ft74RNQlgihaqI\nhILnxqkmWoBawJSYpXfM2/wK3Af8goXpCmAq8BewyR2zEKvR4h4XuOeb3PE145VTJ6pEJCSSroku\nw5r3xcnHap+NsSAdARztS/Ec1VRFJDR8aP4fAfwMLAU2Aq8DbYHqFFYy62M1WtxjA/e8HFAN+CPe\nByhURSQcPF9C9RfgIKwv1cP6SGcAHwInu2POAd50z0e5ddz+D4BIvA9Q819EQsOHcaqTsRNO07A+\n0q+Ap4ExwMvAHW7bIHf8IOB5bEjVn9hIgbgUqiISCh6+XVF1q1tizQUOLObYdcAp2/LmClURCQlN\n/Sci4h9N/SdBu/SMDvQ88RA8z2Pw6xN59MUJAFx8ensuPPUwCjZHeOeT77np4Te3vKZB3XymvdaX\n/k+O5aHnxwdT8Ay3uaCAey/oSvVadbhwwCA+fu05JowYzLJf53PnW1OoUr0GAONffJop77255TW/\nz5/NnW9NofKO1YMsfqBUU5XA7NFkZ3qeeAiHnX0vGzYWMOqxSxj7yffUr5PP8R325sDT7mbDxk3s\nlF9lq9fdc+2JjJs4PaBSZ4cJIwZTd9cmrFuzGoDGe7dmz0M68sgVZ2x1XKcze9PpTBu3/t3E8UwY\n/n9ZHaigUJUAtWhcly+/n8fadRsB+GTqbLp13Jf992jIfYPfY8NGu3hk6fLVW17TucM+zPv1D9as\n3RBImbPB8iWLmDHpQ47scSkfvmInmBs03zPh66a9P4rWnTqnunhpLSy3U9E41Qw1fc5vtN2vKTWq\nVSavUnmOPnRP6tfNp+mutWm7XxM+fu46xj17Ja33aAhA5bwKXNvz3/R/amzAJc9srw+8nS6X9MHL\nSf5Xb8O6tfww+WNadfD1wp/wSf4y1UCpppqhZv68mPuHvMdbj1/K3+s28M3MhRQUbKZcbg41qlWm\nXY/7aLPnrgwbcB4tj+9H34uO45FhH6iWmkLfTxxP1fyaNNx9b2Z99fk2va7x3q2zvukPav5LwIaO\nnMTQkZMAuO2yzvy6+C+aN6rDyPFfAzBl+nw2b45QK78KB+y1KyccsS/9r+pGtap5bN4cYd2GjTz5\nysdBfoWMMve7qXw3cTwzPp/Axg3rWbdmNc/972p63PJg3NdNGz+a1kdkd9M/SqHqv8rAcOza3Fzg\ndmx+w+HAMcBa4Ezs6ofOQF9sstk/gO7AYqAfNpnCbkBDbMLag9zrf3Wv21hG3yeldsqvwtLlq2lQ\nN5+uHVvRvsf9bI5EaH9Acz6eMoumDWtToXw5li1fzRG9HtryupsuPJY1f69XoPqsy0U30OWiGwCY\n9dXnfPDSMwkDde3qlcz+ejJn3/xAWRQx7SlU/Xc08BtwnFuvhoXqCmBvoAfwEHA88CkWlhHgfOAG\n4Fr3uibA4cAewCTgJLf/DffeI4v57N5uoVb1yv5+qxR56b7zqVG9Mhs3FXDV3cNZsXotQ0dO4ql+\n3Zky4kY2bCzg/FueD7qYWe+jV4fw/otPs+rPpdx97rHscVAHzuxzNwDffjyOFgccRsW8HQIuZfDC\ncjsVLxKJOzdAumkOjMNubzAa+ASYh00wOxcoD/yOzXe4N3A/sDNWW/0ZC+V+WE20P3aibi12O4UI\n8D/s+t7Calsxps74JXJo9wF+fi/ZTgMeuTbxQVJmTm21C3WqVvQ1Ab9bsCLS7aHPEh435/5jplLy\n1H8pF7az/z8B+wPfYRMf3OK2x/5liD5/BHgUC9cLseCMWu8eN2MBG4lZD1vtXSRreF7iJWhhC9Vd\ngL+BYcC9WMACnBbzOMk9r0bhnIjRqbtEJKw8yMnxEi5BC1utbG8sTKM1zIuxabzygW+xGmj0spR+\n2Kzey7E5EBuXcVlFxEc+zlKVUmEL1XfdUtS9wH+KbHuTwolmY/Ursl4lzj4RSSMhyNTQhaqIZLF0\naN4nkgmh2ijoAohI6nleevSZJpIJoSoiWULNfxERH+lElYiIjxSqIiI+8TydqBIR8VUIKqoKVREJ\nDzX/RUR8FIJMVaiKSDhonKqIiM/U/BcR8VEIMlWhKiIhoSFVIiL+0dR/IiI+C0GmKlRFJDxUUxUR\n8UsGDKmqkeC1f/pZEBGReDKhT3UqdpfR4r5FBNgtJSUSESlBCDI1bqjqRnkiklbCUFNN5hbVHnAW\ncLNbbwgcmLISiYgUw/MgN8dLuCSpOnYn5h+BH4CDsS7P94BZ7jE/+tHAQGA2dtfm/eO9cTKh+rj7\nwDPd+irgsWRLLiLiF89LvCTpYeAdoAXQCgvWPsB4oJl77OOOPcZtawb0Bp6I98bJhOq/gEuBdW59\nOVAh6aKLiPjE87yESxKqAe2AQW59A/AX0BUY6rYNBbq5512B57BzSZ9jtdydS3rzZEJ1I5Dr3hBg\nJ2BzMiUXEfGLR+Kmv2v+1wKmxCy9i7xVY2ApMBj4CngWqAzUARa5Y3536wD1gAUxr1/othUrmXGq\nA4E33Af0B04G+ibxOhER/yTfvF8GtImzvxzWL3o5MBnrCuhT5JgIhRXJbZJMqL6ADa/q5Na7Yf0P\nIiJlyit2hOc2W+iWyW79VSxUF2PN+kXucYnb/yvQIOb19d22YiXT/AfYAesCyAHyknyNiIivcrzE\nSxJ+x5rzu7v1TsAMYBRwjtt2DvCmez4K6IGNAjgIWEFhN8E/JFNTvQU4BXjNvelgYARwR1LFFxHx\ngYevU/9djrXCKwBzgZ5YpXE40AuYD5zqjh0LHIsNqfrbHVuiZEK1OzbkIHr2/27gaxSqIlLGcvwb\n/P81xfe7dipmWwQbAZWUZEL1N6AShaFakTj9CSIiKbFt41ADEy9UH8ESegUwHbvCIAL8G/gi9UUT\nESmUCROqTHGPU7EhVVETUlYaEZESbdNlqIGJF6pD4+wTESlz6R+pyfWpNgPuAvbA+lajNPWfiJSZ\nsDT/kxmnOhibQGATcDh2DeywVBZKROQfkhijmg69A8mEah42Y4uHjd3qBxyXwjKJiBQrJ8dLuAQt\nmeb/eix8ZwGXYcOpqqSyUCIiRWVS8/9K7DLVK4DWwNkUXsolIlJmwtD8T6am+qV7XE2Cy7NERFLF\n83y9oipl4oXqW8Sf+qqLz2UREYnDC32o3ldmpRARSUIIMjVuqH5UZqUQEUlCGE5UJdOnKiISuOjd\nVNOdQlVEQiMEFVWFamns17Ihy798NOhiSIz8LgODLoLEOOTh06hTtU7iA7dR2Jv/OvsvImnDI/n7\nPwVJZ/9FJBwyoE9VZ/9FJG14pMcVU4lo6j8RCQkvFH2qmvpPRELBA3JzEi9B09R/IhIO7tr/REvQ\nNPWfiIRGGlREE9LUfyISCjafauIlaJr6T0RCI+xDqqI+pPiLADr6XBYRkRJl0pCq62KeVwJOwkYC\niIiUnQyYpDpqapH1icAXKSiLiEhcIcjUpEK1RszzHOxkVbXUFEdEpHgekBuCVE22phrBvtMm4Geg\nVyoLJSJSnEzpU20JrCuyrWIKyiIiUqKwnKhKZpzqZ8Vsm+R3QURE4vLs2v9ES9Di1VTrAvWwy1T3\nw/5QAOyIXQwgIlKm0uHa/kTihepRwLlAfeB+CkN1JXBjaoslIrI1a/4HXxNNJF6oDnXLScBrZVMc\nEZGSZUqfamugesx6PnBHaoojIlI8z7MhVYmWJOUCXwGj3XpjYDIwG3gFqOC2V3Trs93+RoneOJlQ\nPQb4K2Z9OXBsEq8TEfGVjxOqXAn8ELN+D/Ag0BTLuOiw0V5uvanbf0+iN04mVHPZeghVHhpSJSIB\nyPESL0moj80J/axb97C5TF5160OBbu55V7eO29+JwvNLxUpmnOoL2CTVg916T2z2fxGRMrMNJ6pq\nAVNi1p92S9RDwA1AVbdeE2uNR+c0WYiNfMI9LnDPNwEr3PHLSvrwZEL1HuAb4Ai3fjvwbhKvExHx\nT/J3U10GtClh3/HAEuxK0Q7+FGxryYQqwDtuATgUeAy4NBUFEhEpTnSS6u3UFuiCnReqhI27fxg7\nGV8Oq43Wx+5wgntsgNVey2HznvwR7wOSHUq7HzAAmIfVVH9M/juIiPgjJ4klgf9iodkIOB34AOiO\nzRt9sjvmHOBN93wUhXc6OdkdX9z80lvEq6k2B85wyzJsWIGH3VFVRKSMpfQy1P8AL2PDRb8CBrnt\ng4DnsSFVf2JBHFe8UP0R+ATrg5jttl1duvKKiGyfFEz9N8EtAHOBA4s5Zh1wyra8abza8onAIqxa\n/AxJDCUQEUklL4klaPFCdSRW1W2BBetVQG3gCeDI1BdNRGRrYbibajInqtYALwKdsQ7er7D+BxGR\nsuMR+qn/irOcfw6kFRFJuUy6nYqISFpI/0hVqIpIiKRD8z4RhaqIhILHNk3tFxiFqoiERvpHqkJV\nRELCp2v/U06hKiKhkROCuqpCVUTCwQv/jf9ERNKGmv8iIj5T819ExEeqqYqI+GQb7lEVKIVqFiko\nKKDtv9qwS716vP7maCKRCP1u6cvrr40gNzeXC3pfzKWXXxF0MTPa5d325dyj9iQSgenzltH7wfcZ\n078bVfLsNvO1q+cx5afFnHr7mC2vad2sNhMeOJUed7/DGxNnl/TWWSHJu6UGSqGaRR4d+DC7t2zJ\nqpUrAXh+6BAWLljAN9//SE5ODkuWLAm4hJltl5qVuaRLK/a7aBjrNhQw7L/HcEr75hxxw2tbjnnp\npmN5a9LcLes5OR53nNeW96f9EkSR04yHF4I+1WTvUSUht3DhQt55eww9zzt/y7ann3qCG/veQk6O\n/W9Qu3btoIqXNcrl5pBXoRy5OR55Fcux6I81W/ZVzatA+33qbxWql3RuxciJc1j6199BFDeteG5I\nVaIlaOkUqucCuwRdiEx1/bVX0f+uAVsCFODnuXN4dcQrtP1XG7oefwyzZ80KsISZ77c/1vDQ69P4\naWhPfn7hfFauWc/4rwproJ0P3o0J3yxk1doNgNVsuxzShKfHfBtUkdNOjpd4CZpCNQuMHTOa2jvV\nZv/Wrbfavn79eipWqsTEyVPo2esCLrzgvIBKmB2qV6nI8QftRsueQ9ntrEFUrlSe0w/ffcv+Uzs0\nZ/hHM7es39u7HX3/byKRuPfuzC5eEv8FLZV9qo2At4FPgUOw+2d3BXYHngR2AOYA52H3v2oDvACs\nBQ52j0Xdjd2zexMwDrgOGILdnKsNdg/va4DR7vOfByq7114GfAZ0AG4D/gL2BoYD3wFXAnlAN1eu\njDHps4mMHj2Kd94Zy/p161i5ciU9e5xFvfr16dbtRAC6djuBC8/vGXBJM1vHfRsw7/eVLFtp/2uP\nnDiHg1ruzMsfzqTmjpVo07wOp8WcoNq/WW2e63M0ADV3rMRRBzRi0+bNW3UPZJs0aN0nlOqaajPg\nMWBPLMROAp7DbseyDxZmtwKvAlOw+2/vS/GBWhM4wb3XPtitZKMaYXdCPA4L7ErAEuDfwP7AacDA\nmONbARcBLYGzsdtxHwg8C1y+PV84Hd3e/y7mzFvIzNnzeO6Fl+lweEcGPzeMzl268dGEDwH45OOP\naNqsecAlzWwLlq7iwBZ1yatodZnD923AzAV/AnDCoU15+4t5rN9YsOX4lucNpUXPIbToOYQ3Pp3N\nVY9NyO5AxWb+T7QELdVn/38GvnbPpwJNgOrAR27bUGBEku+1AquRDsJqoqNj9g0HNgOzsFvNtnCf\n/SgW0gVYcEZ9id0pFqxWOs49/w44vITP7+2WjHHdDX3o2aM7jzz8IJWrVOGJp54NukgZ7cuZi3nj\n09lMGng6mwoifDN3KYPeng7AKe2ac9+IqQGXMP0FH5mJpTpU18c8L8ACtbQ2YbXJTsDJWHO+o9tX\ntNcpAlwNLMZqpTlYIBdXrs0x65sp+d8k9t5coe3late+A+3adwCgevXqvDFqTPwXiK/ueGEyd7ww\n+R/bj+rzetzX9X7w/VQVKVxCkKplfaJqBXbzwMPc+tkU1lpXAVXjvLYKUA0YiwVmq5h9p2DfpQmw\nGzDTHbsIC8qzgVxfvoGIBCbbT1SV5BwKT1TNBaJnR4a47SWdqKoKvIn1l3rYCamoX4AvsBNVF2G1\n0seB14AewDvYrbZFJKS8NBkylYgXCf94jSFY/+qrZfWBmyNENhQkPk7KTn6XgYkPkjLz6cOn0bpZ\nHV8jcM36TZEZvyWuGx3QuNpUbDRQIHSZqoiERHo07xNJ11B9A2hcZNt/gHeLOfbclJdGRNJCGoyY\nSihdQ/WEoAsgIulHoSoi4hMP1PwXEfGTaqoiIn7xFKoiIr5S819ExEdhqKmm03yqIiIl8pJcktAA\n+BCYAUzHpv0EqAG8h03M9B6QH/PRA4HZwLfYzHclUqiKSGh4npdwScIm4FpgD+Ag4FL3vA8wHpuy\ndLxbBzjGbWuGzVT3RLw3V6iKSGh4XuIlCYuAae75KuAHoB42if5Qt30oNmE9bvtz2Ox0n2Oz7e1c\n0psrVEUkNJJs/tfCJr2PLvHmQW4E7AdMBupQOM/y724dLHAXxLxmodtWLJ2oEpHwSK4muozkJlSp\ngs1kdxWwssi+CKWcN1mhKiKhEL1FtU/KY4H6AhCdIXwx1qxf5B6XuO2/Yie3ouq7bcVS819EQsOn\ns/8edlumH4AHYraPwuZ7xj2+GbO9h3vdQdhk+4sogWqqIhIe/lRU22J3A/mOwnvo3YjdrXk40AuY\nD5zq9o0FjsWGVP1N4cT6xVKoikhIeH41/z+l5HjuVMy2CDbsKikKVREJjRBcUKVQFZEQCUGqKlRF\nJBQ0n6qIiM/CcDdVhaqIhMM2jJkKkkJVREJDzX8RER+FYT5VhaqIhIKH+lRFRHyW/qmqUBWR0FDz\nX0TERyHIVIWqiISD9ammf6wqVEUkHDROVUTEXyHIVIWqiISFb1P/pZRCVUTCI/0zVaEqIuERgkxV\nqIpIOHhonKqIiK/C0Kequ6mKiPhINVURCQdPzX8REV9pPlUREZ9o6j8REb8pVEVE/KPmv4iIj9T8\nFxHxk0JVRMQfXiga/+BFIpGgyxBGS4H5QRfCB7WAZUEXQraSKT+TXYGdfH7Pd7B/n0SWAUf7/NlJ\nU6hmtylAm6ALIVvRzyTkdJmqiIiPFKoiIj5SqGa3p4MugPyDfiYhpz5VEREfqaYqIuIjhaqIiI8U\nqiIiPlKoioj4SKEqEk5huGIzKylUpagjgAeA9kCdgMsiJYsO2+kC7A1UCbAsEkNDqiRWK+AZ4DOg\nBvAtMILMmOcgEz0OtAM+BXKBG4DlgZZIVFOVLeoCzYD7gKuAl4GdgVOAxgGWSwrFNvlbYH/s9gIG\nYGH6EJAfQLkkhmqqAnAc8CiwCJsO8kC3/WisebkAeBBYF0jpBCxQo7+sj2J/6HbE/ugtxWaFuggL\n2+7AqgDKKKimKvZLeAFwItABqITVUsGmWhsNjESBGrRooP4XyANuxv4AnunW52JdN+OANUEUUIxC\nNXt5WFPxQqzWUx7YAOwD7IaFKcBY4IcgCij/cBRwGfAiMA372R0NXILVWmdhtdjN6Hc7MPqHz14R\nrB/uGWAi9su5j9t3INAQ2B8N3QlS0X/7b7HWw83YH75vgauB07FumlibU146KZb6VLPTkcDhwM9Y\n0z5aY/0Tq6F+HVzRxIntQ+0MrAXGAxWBvkBzoA/W7G+MnbRSkKYBhWr2OR64DTtj3B0oAK7Emv/X\nAkuwEQB/o1/SdPAMsAOwEaiHdQFUAG4CDgHOBn5zx+agn1ng1PzPLvlYM/8UrOZTF/gJeMytPwi8\nAqxGv5zp4Drsj113rIa6O9bk3wDcg/2sfo85Xj+zNKCaanbJwW7Glg88j/XFRYBR2HCqzugsf5Bi\nm/wAjbCWwwBgPdaSmIEN9G8Rc6xqqGlEt6jODu2wWulG4A1s2NSPwBzgYOAj4AkUqEGKDdTd3eNM\nLDDLA8PdtleBpm57gdumQE0jqqlmvn9hl5q+jPXBLcRqqJ9gJzeOAM6ncAiVlL3YQH0Zuw3z7sCT\nWIviSre/OdY1cxYWpLkUBqukCdVUM9thwKnAxcAYt20ScCsWpvsD9wLf8M+mp5Sd6L/7mVhIHgG0\nBPpjIzLuxya42QDcggWqhwI1LelEVebaDTgJ6OGeR52NXeO/AQvYb9x2BWrZix2H2gG4AmvqV8Iu\nuLgJC9FawEvAjcAmrIaqn1eaUqhmpi5Y39s9wPXYFTf7un2NsVpQdTSwP0ixLYOOwATg/9x6O2wq\nvx+wGagqFnmtaqhpTH2qmWdfYAhwBoWXlw7DpvWbhP2yvgq8HkTh5B8GY+F6Ptasvwpoi12/vwzr\nB2+PnWSUEFBNNfOsx66Iaoc1Hd/DflmXY1dSDcMCNTeoAsoW12O/g+e59b2Ah7Hxpw2xYD0KC1Sd\n/wgJ/aAyzwJgCnAOdmXUq9gJq+exsY3PYuH6fVAFlC2qYFP09QAOwGqk693zXbAZ/dsBH2AXZ0gI\nqKaaeVZjMxV1wGqklbEhOZuAR4C70C9oungE+0N3AFY73QeYh93GZiDwKza+WD+vEFGfaubKxfpX\nHwfuBN4MtjhSRHFD2G7DaqZHoj7U0FKoZrbKQG1sNqromX79wMtW0UtIY8M0+rwS1po4EutD3YR1\nzW0q5jWS5hSqIqmTD1QFfgF6A0/HObYWdjKxAF0pFWoKVZHU6YjN1J+L3fLkyBKOi63NVsAuzJCQ\n0okqkdT5AJukpi3WXwpb/855bokG6vHYSA1dlBFiClURfxUNxLuAG7BLTjuydf9qhK2v+78XO/uv\n5mOIaZyqiL+igXgnVmlZh82Hug67E+p6bIKb6Vjggk1CfQU2V8Ocsiys+E+hKuK/p4Aa2DR+BwAf\nYmf1c7GB/jtgF2YAdAWuwSa6mVHmJRXf6USVyPYrOuRpMDZL/59u/Tbs6qlrsREBf8Uc3wZYgd1e\nWjKA+lRFtk9soB6CjQveB6t5Rk3AxqKCDZuKUPi7NwUFakZR81+k9GID9RnsaqhR2K2kr8f6UZ8C\njsXGq8YdpOd9AAADhElEQVQer1ugZCiFqkjpRQPyOmAxdh1/L+zmiuOws/57Y7dBOdYdr6ujMpz6\nVEW2T0vgc2yC6auxCaVPAhoAOwIPYH2rEXSlVFZQn6rI9vkBm2bxBOA0bMjUy9gE00soDFTdUypL\nqPkvsv1GYpeWRsemvoTVXItOnCJZQKEq4o+xWHAOxmqp78XsU6BmEfWpivjrYOAL1NTPWgpVkdTQ\nSakspVAVEfGRzv6LiPhIoSoi4iOFqoiIjxSqIiI+UqhKaRQAXwPfAyOw+UFLqwMw2j3vAvSJc2x1\n4JJSfEY/7Pr8ZLfHGgKcvA2f1Qj7d5EspVCV0lgL7AvshV1JdFGR/R6l+39rFHB3nP2lDVWRMqNQ\nle31CdAUq6HNBJ7DamoNsLuHTgKmYTXaKu41RwM/uu0nxrzXucCj7nkd4A3gG7ccggVuE6yWfK87\n7nrgS+BbCm+uB3ZPqJ+AT4Hdk/geF7j3+QZ4ja1r30dg857+hN2cD2wc6r0xn31hEp8hWUChKtuj\nHHAM8J1bbwY8DuwJrAH6YoG0PxZK12CTNT8DdAZaA3VLeO+BwEdAK/f66VjXwByslnw9FtrNgAPd\nttbYnKatgdPdtmOxW5ok8ro7rhU2SUqvmH2N3GccBzzpvkMvbMb+A9xyAdA4ic+RDKdr/6U08rDa\nIlhNdRCwCzAfmwYP4CBgD2CiW6+A1VpbAD9TONv9MKB3MZ/REbufE1gf7grsViSxjnTLV269Chay\nVbFa7t9u+6gkvtNewB1YF0MV4N2YfcOxSaVnAXPddzgSm+E/2t9azX32T0l8lmQwhaqURrRPtag1\nMc89bFKRM4ocU9zrSsvD7kj6VJHtV5XivYYA3bDm/7nYCbSoopcdRqfyu5ytwxesVitZTM1/SZXP\ngbZYfytAZWwG/B+x4GnithcN3ajx2K2cwfovqwGrsFpo1LvAeRT21dbD7hH1MRaQee74zkmUtyqw\nCCiP3TI61inY70oTYDes7/hdV77y7pjm7jtKllNNVVJlKVbjewmbDR+sj/UnrLk/Bmuef8LWQRl1\nJfA01ndZgAXYJKw74XvgbaxftaXbDrAaOAs7AfYKVutcgp1MSuRmYLIr9+QiZfoFm3lqR2ykwzrg\nWeyPwzSs1roUC3LJcppQRUTER2r+i4j4SKEqIuIjhaqIiI8UqiIiPlKoioj4SKEqIuIjhaqIiI/+\nH9A/YSvnK82/AAAAAElFTkSuQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x10fb4fbe0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "plt.figure()\n",
+    "plot_confusion_matrix(cm, classes=('spam', 'not_spam'), title='Confusion matrix')"
    ]
   },
   {
