even more cm tweaks

--- a/Gaussian Naive Bayes.ipynb
+++ b/Gaussian Naive Bayes.ipynb
@@ -332,7 +332,7 @@
     "    plt.ylabel('Actual label')\n",
     "    plt.xlabel('Predicted label')\n",
     "    print(plt.style.available)\n",
-    "    plt.style.use('dark_background')"
+    "    plt.style.use('se')"
    ]
   },
   {
